--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,8 +1,8 @@
-- name: deploy via ssh
-  uses: appleboy/ssh-action@master
-  with:
-    host: ${{ secrets.HOST }}
-    username: ${{ secrets.USERNAME }}
-    password: ${{ secrets.PASSWORD }}
-    port: ${{ secrets.PORT }}
-    script: ~/deploy_sciviscourse
+name: deploy via ssh
+uses: appleboy/ssh-action@master
+with:
+  host: ${{ secrets.HOST }}
+  username: ${{ secrets.USERNAME }}
+  password: ${{ secrets.PASSWORD }}
+  port: ${{ secrets.PORT }}
+  script: ~/deploy_sciviscourse
