--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,8 +1,15 @@
-name: deploy via ssh
-uses: appleboy/ssh-action@master
-with:
-  host: ${{ secrets.HOST }}
-  username: ${{ secrets.USERNAME }}
-  password: ${{ secrets.PASSWORD }}
-  port: ${{ secrets.PORT }}
-  script: ~/deploy_sciviscourse
+on: [push]
+jobs:
+
+  build:
+    name: Build
+    runs-on: ubuntu-latest
+    steps:
+      name: deploy via ssh
+      uses: appleboy/ssh-action@master
+      with:
+        host: ${{ secrets.HOST }}
+        username: ${{ secrets.USERNAME }}
+        password: ${{ secrets.PASSWORD }}
+        port: ${{ secrets.PORT }}  
+        script: ~/deploy_sciviscourse
