--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,7 +5,7 @@ jobs:
     name: Build
     runs-on: ubuntu-latest
     steps:
-      name: deploy via ssh
+    - name: deploy via ssh
       uses: appleboy/ssh-action@master
       with:
         host: ${{ secrets.HOST }}
