--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ author: Steve Petruzza [theme from Amit Merchant]
 description: Spring 2020 - CS 5635/6635 
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: /images/scivis.png
+avatar: /images/scivis.jpg
 
 #
 # Flags below are optional
