update schedule, project

--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ name: Scientific Visualization
 author: Steve Petruzza [theme from Amit Merchant]
 
 # Short bio or description (displayed in the header)
-description: Spring 2020 - CS 5635/6635 
+description: Spring 2020 - CS 5635 / CS 6635 
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: /images/scivis.jpg
