--- a/_data/schedule.yml
+++ b/_data/schedule.yml
@@ -117,12 +117,8 @@
   date: Monday, Apr 20
 
 - name: Reading Day
-  date: Monday, Apr 22
+  date: Wednesday, Apr 22
   holiday: true
 
-- name: TBD
-  date: Monday, Apr 27
-
 - name: Best Project Presentations
-  date: Monday, Apr 29
-
+  date: Monday, Apr 27 (6.00 to 8.00 PM)
