--- a/_data/schedule.yml
+++ b/_data/schedule.yml
@@ -84,9 +84,8 @@
   date: Wednesday, Mar 18
   image: ../images/schedule/tensors.jpg
 
-- name: Tensor field visualization
+- name: Tensor field visualization (2)
   date: Monday, Mar 23
-  image: ../images/schedule/tensors.jpg
 
 - name: Perception, color, hue, lighting
   date: Wednesday, Mar 25
