--- a/_data/schedule.yml
+++ b/_data/schedule.yml
@@ -57,7 +57,7 @@
 - name: Presidents’ Day Holiday
   date: Monday, Feb 17
   description: No class.
-  holiday: true
+  dayoff: true
 
 - name: Visualization of 3D scalar fields (2)
   date: Wednesday, Feb 19
@@ -80,7 +80,7 @@
 
 - name: Vector field visualization (2) 
   date: Wednesday, Mar 4
-  description: Seeding streamlines , Line Integral of Convolution (LIC), 3D LIC, illumination and depth cues.
+  description: Seeding streamlines, Line Integral of Convolution (LIC), 3D LIC, illumination and depth cues.
   image: ../images/schedule/streamlines.jpg
 
 - name: Spring break
@@ -100,7 +100,7 @@
 
 - name: Tensor field visualization
   date: Wednesday, Mar 18
-  description: Tenson in engineering and medicine, diffusion tensor imageing, eigenvalues and eigenvectors, direct visualization methods.
+  description: Tensor in engineering and medicine, diffusion tensor imaging, eigenvalues and eigenvectors, direct visualization methods.
   image: ../images/schedule/tensors.jpg
 
 - name: Tensor field visualization (2)
@@ -137,11 +137,11 @@
 
 - name: Big data (2)
   date: Wednesday, Apr 15
-  description: multi-resolution data structures, parallel visualization, image compositing for volume rendering. 
+  description: Multi-resolution data structures, parallel visualization, image compositing for volume rendering. 
 
 - name: Visualization Research Challenges
   date: Monday, Apr 20
-  description: In situ analysis and visualization, post hoc data exploration, data quality, and data reduction,  
+  description: In situ analysis and visualization, post hoc data exploration, data quality, and data reduction.
   image: ../images/schedule/challenges.jpg
 
 - name: Reading Day  (no class)
