--- a/_data/schedule.yml
+++ b/_data/schedule.yml
@@ -156,5 +156,5 @@
   date: Wednesday, Apr 22
   dayoff: true
 
-- name: Best Project Presentations
+- name: Project Presentations
   date: Monday, Apr 27 (6.00 to 8.00 PM)
