--- a/environment.yml
+++ b/environment.yml
@@ -3,6 +3,7 @@ channels:
   - conda-forge
   - visus
 dependencies:
+  - python=3.7
   - numpy
   - matplotlib
-  - OpenVisus
+  - OpenVisus==1.3.70
